Work in progress

--- a/index.html
+++ b/index.html
@@ -4,9 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./index.css" />
+    <script src="./index.js" defer></script>
+    <title>Portfolio</title>
 </head>
 <body>
-    
+
+<!-- This is the title-------------------------------------------------------------------------------------------------------------->
+
+    <h1 class="title">My name is Alex Gîdoiu</h1>
+    <p class="subtitle">I'm a Front-end Web Developer</p>
+
+<!-- This is about me--------------------------------------------------------------------------------------------------------------->
+
+    <div class="flex">
+        <img src="./photo/profile_pic.jpeg" class="profil" />
+        <div class="about">
+            <h2 class="abouttitle">This is a little about me!</h2>
+            <p class="aboutme">Aenean et enim placerat, vehicula elit ac, blandit sapien. Vestibulum finibus el</p>
+        </div>
+    </div>
+<!--  This are the projects ---------------------------------------------------------------------------------------------------------->
+
+    <h2 class="titleproj">This are my projects!</h2>
+
+    <div class="flexing">
+        <div class="container">
+            <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
+            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+        </div>
+        <div class="container">
+            <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
+            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+        </div>
+        <div class="container">
+            <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
+            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+        </div>
+    </div>
+    <div class="flexing">
+        <div class="container1">
+            <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
+            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+        </div>
+        <div class="container1">
+            <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
+            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+        </div>
+        <div class="container1">
+            <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
+            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+        </div>
+    </div>
+
 </body>
 </html>
