--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 
     <h1 class="title">My name is Alex Gîdoiu</h1>
     <p class="subtitle">I'm a Front-end Web Developer</p>
+    <div class="circle">
+        <img src="./photo/arrow_downward.png" class="arrow"/>
+    </div>
 
 <!-- This is about me--------------------------------------------------------------------------------------------------------------->
 
@@ -21,39 +24,90 @@
         <img src="./photo/profile_pic.jpeg" class="profil" />
         <div class="about">
             <h2 class="abouttitle">This is a little about me!</h2>
-            <p class="aboutme">Aenean et enim placerat, vehicula elit ac, blandit sapien. Vestibulum finibus el</p>
+            <p class="aboutme">This is me. Nicole Cherry</p>
         </div>
     </div>
+
+<!-- This are my skills -------------------------------------------------------------------------------------------------------------->
+
+<section class="skills" id="skills">
+    <h2 class="skill-header">My Skills</h2>
+
+    <div class="skills-wrapper">
+      <div class="first-set animate__animated animate__pulse">
+        <img
+          src="./photo/html.png"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="./photo/css.png"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="./photo/javascript.png"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+      </div>
+
+      <div class="second-set animate__animated animate__pulse">
+        <img
+          src="./photo/git.png"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="./photo/node.png"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="./photo/github.png"
+          alt=""
+          loading="lazy"
+          class="icon icon-card"
+        />
+      </div>
+    </div>
+  </section>
+
 <!--  This are the projects ---------------------------------------------------------------------------------------------------------->
 
     <h2 class="titleproj">This are my projects!</h2>
 
     <div class="flexing">
         <div class="container">
-            <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
-            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+            <a href="https://breckmen.github.io/pingu/" class="link"><img src="./projects/pingu/photo/pingu_in_laptop.png" class="laptop"  /></a>
+            <p class="description">A project of a penguin that waves at you, made with HTML and CSS!</p>
         </div>
         <div class="container">
             <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
-            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+            <p class="description">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
         </div>
         <div class="container">
             <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
-            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+            <p class="description">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
         </div>
     </div>
     <div class="flexing">
         <div class="container1">
             <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
-            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+            <p class="description">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
         </div>
         <div class="container1">
             <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
-            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+            <p class="description">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
         </div>
         <div class="container1">
             <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
-            <p class="test">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+            <p class="description">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
         </div>
     </div>
 
