CHANGE THE HTML

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <div class="flexing">
         <div class="container">
-            <a href="https://breckmen.github.io/pingu/" class="link"><img src="./projects/pingu/photo/pingu_in_laptop.png" class="laptop"  /></a>
+            <a href="https://breckmen.github.io/pingu/" class="link"><img src="./photo/pingu_in_laptop.png" class="laptop"  /></a>
             <p class="description">A project of a penguin that waves at you, made with HTML and CSS!</p>
         </div>
         <div class="container">
