--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             <p class="description">A project of a penguin that waves at you, made with HTML and CSS!</p>
         </div>
         <div class="container">
-            <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
-            <p class="description">This is the first project done with html, css and javascript. Hope you like what you see and call me after!</p>
+            <a href="https://breckmen.github.io/drum_kit/" class="link"><img src="./photo/drum_kit_in_laptop.png" class="laptop" /></a>
+            <p class="description">A project with a drum kit, made with HTML, CSS and JavaScript!</p>
         </div>
         <div class="container">
             <a href="#" class="link"><img src="./photo/laptop.png" class="laptop" /></a>
