--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- This is the title-------------------------------------------------------------------------------------------------------------->
 
     <h1 class="title">My name is Alex Gîdoiu</h1>
-    <p class="subtitle">I'm a Front-end Web Developer</p>
+    <p class="subtitle">I'm a Front-end Web Developer!</p>
     <div class="circle">
         <img src="./photo/arrow_downward.png" class="arrow"/>
     </div>
@@ -24,7 +24,9 @@
         <img src="./photo/profile_pic.jpeg" class="profil" />
         <div class="about">
             <h2 class="abouttitle">This is a little about me!</h2>
-            <p class="aboutme">This is me. Nicole Cherry</p>
+            <p class="aboutme">I'm a junior FrontEnd Developer. Just starter about a year ago to learn and i think i'm ready to start put in action what i learn.
+              I don't have a lot of experience, but if you give me a chance i can make experience with you and work even better!
+            </p>
         </div>
     </div>
 
